--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/user-event": "^7.2.1",
     "apexcharts": "^3.17.0",
     "bootstrap": "^4.4.1",
+    "marked": "^0.8.2",
     "randomcolor": "^0.5.4",
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.6",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
     "react-minimal-pie-chart": "^6.0.1",
     "react-scripts": "3.4.1"
   },
