--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.6",
     "react-bootstrap": "^1.0.0",
+    "react-dark-theme": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "react-minimal-pie-chart": "^6.0.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-use-dark-mode": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
