--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.6",
     "react-bootstrap": "^1.0.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "react-minimal-pie-chart": "^6.0.1",
