--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "react-minimal-pie-chart": "^6.0.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-scroll-up-button": "^1.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
