--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "apexcharts": "^3.17.0",
     "bootstrap": "^4.4.1",
+    "d3-scale": "^3.2.1",
     "marked": "^0.8.2",
     "randomcolor": "^0.5.4",
     "react": "^16.13.1",
@@ -22,7 +23,9 @@
     "react-markdown": "^4.3.1",
     "react-minimal-pie-chart": "^6.0.1",
     "react-scripts": "3.4.1",
-    "react-scroll-up-button": "^1.6.4"
+    "react-scroll-up-button": "^1.6.4",
+    "react-simple-maps": "^2.0.0",
+    "react-tooltip": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
